--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ p{
 }
 section{
     display: flex;
+    margin-bottom: 100px;
 }
 .half-width{
     width: 50%;
@@ -27,7 +28,7 @@ section{
 .link-button{
     text-decoration: none;
     background-image: linear-gradient(orange,tomato);
-    padding: 10px 80x;
+    padding: 10px 50x;
     border-radius: 5px;
     color: white;
     font-weight: 700;
@@ -35,4 +36,9 @@ section{
 .top-banner{
     background-image: url(images/top-banner.png);
     background-repeat: no-repeat;
+}
+.dream-big{
+    background-image: url(images/dream-bg.png);
+    background-repeat: no-repeat;
+    background-position: right;
 }
